module/module-query/src/main/java/org/sunt/query/formula/function/parser/FunctionParser.java
// Generated from D:/projects/pms/module/module-formula/src/main/java/org/sunt/formula/function/parser\FunctionParser.g4 by ANTLR 4.9.1
package org.sunt.query.formula.function.parser;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FunctionParser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
			new PredictionContextCache();
	public static final int
			LINE_COMMENT = 1, BLOCK_COMMENT = 2, WS = 3, NEWLINE = 4, AT = 5, LANGLE = 6, RANGLE = 7,
			LPAREN = 8, RPAREN = 9, LCURL = 10, RCURL = 11, EQUAL = 12, COLONCOLON = 13, COLON = 14,
			COMMA = 15, DOT = 16, ASTERISK = 17, SEMICOLON = 18, QUESTION = 19, PACKAGE = 20,
			IMPORT = 21, CLASS = 22, INTERFACE = 23, VARARG = 24, OVERRIDE = 25, PRIVATE = 26,
			ABSTRACT = 27, TYPEALIAS = 28, FUN = 29, DT_STRING = 30, DT_INT = 31, DT_ANY = 32,
			DT_BOOLEAN = 33, DT_DATE = 34, DT_TIME = 35, DT_DATETIME = 36, DT_DOUBLE = 37, NULL = 38,
			NUMBER = 39, STRING = 40, IDENTIFIER = 41;
	public static final int
			RULE_root = 0, RULE_packageDeclare = 1, RULE_importDeclare = 2, RULE_dialectInterface = 3,
			RULE_typeAliasDelare = 4, RULE_classDeclare = 5, RULE_functionDefine = 6,
			RULE_functionModifierList = 7, RULE_annotation = 8, RULE_annotationNS = 9,
			RULE_functionModifier = 10, RULE_functionImplement = 11, RULE_functionSimpleImpl = 12,
			RULE_functionFullImpl = 13, RULE_typeParameters = 14, RULE_functionParamDefines = 15,
			RULE_functionParamDefine = 16, RULE_functionParamModifierList = 17, RULE_functionParamModifier = 18,
			RULE_functionParams = 19, RULE_functionCall = 20, RULE_expression = 21,
			RULE_dataType = 22, RULE_dataTypeNull = 23, RULE_identifier = 24, RULE_simpleIdentifier = 25;

	private static String[] makeRuleNames() {
		return new String[]{
				"root", "packageDeclare", "importDeclare", "dialectInterface", "typeAliasDelare",
				"classDeclare", "functionDefine", "functionModifierList", "annotation",
				"annotationNS", "functionModifier", "functionImplement", "functionSimpleImpl",
				"functionFullImpl", "typeParameters", "functionParamDefines", "functionParamDefine",
				"functionParamModifierList", "functionParamModifier", "functionParams",
				"functionCall", "expression", "dataType", "dataTypeNull", "identifier",
				"simpleIdentifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[]{
				null, null, null, null, null, "'@'", "'<'", "'>'", "'('", "')'", "'{'",
				"'}'", "'='", "'::'", "':'", "','", "'.'", "'*'", "';'", "'?'", "'package'",
				"'import'", "'class'", "'interface'", "'vararg'", "'override'", "'private'",
				"'abstract'", "'typealias'", "'fun'", "'String'", null, "'Any'", null,
				"'Date'", "'Time'", "'DateTime'", "'Double'", "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[]{
				null, "LINE_COMMENT", "BLOCK_COMMENT", "WS", "NEWLINE", "AT", "LANGLE",
				"RANGLE", "LPAREN", "RPAREN", "LCURL", "RCURL", "EQUAL", "COLONCOLON",
				"COLON", "COMMA", "DOT", "ASTERISK", "SEMICOLON", "QUESTION", "PACKAGE",
				"IMPORT", "CLASS", "INTERFACE", "VARARG", "OVERRIDE", "PRIVATE", "ABSTRACT",
				"TYPEALIAS", "FUN", "DT_STRING", "DT_INT", "DT_ANY", "DT_BOOLEAN", "DT_DATE",
				"DT_TIME", "DT_DATETIME", "DT_DOUBLE", "NULL", "NUMBER", "STRING", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "FunctionParser.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public FunctionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	public static class RootContext extends ParserRuleContext {
		public PackageDeclareContext packageDeclare() {
			return getRuleContext(PackageDeclareContext.class, 0);
		}

		public TerminalNode EOF() {
			return getToken(FunctionParser.EOF, 0);
		}

		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}

		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class, i);
		}

		public List<ImportDeclareContext> importDeclare() {
			return getRuleContexts(ImportDeclareContext.class);
		}

		public ImportDeclareContext importDeclare(int i) {
			return getRuleContext(ImportDeclareContext.class, i);
		}

		public List<TypeAliasDelareContext> typeAliasDelare() {
			return getRuleContexts(TypeAliasDelareContext.class);
		}

		public TypeAliasDelareContext typeAliasDelare(int i) {
			return getRuleContext(TypeAliasDelareContext.class, i);
		}
		public List<ClassDeclareContext> classDeclare() {
			return getRuleContexts(ClassDeclareContext.class);
		}
		public ClassDeclareContext classDeclare(int i) {
			return getRuleContext(ClassDeclareContext.class, i);
		}

		public List<DialectInterfaceContext> dialectInterface() {
			return getRuleContexts(DialectInterfaceContext.class);
		}

		public DialectInterfaceContext dialectInterface(int i) {
			return getRuleContext(DialectInterfaceContext.class, i);
		}

		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_root;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof FunctionParserListener) ((FunctionParserListener) listener).enterRoot(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof FunctionParserListener) ((FunctionParserListener) listener).exitRoot(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == AT) {
					{
						{
							setState(52);
							annotation();
						}
					}
					setState(57);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(58);
				packageDeclare();
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == IMPORT) {
					{
						{
							setState(59);
							importDeclare();
						}
					}
					setState(64);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AT) | (1L << CLASS) | (1L << INTERFACE) | (1L << TYPEALIAS))) != 0)) {
					{
						setState(68);
						_errHandler.sync(this);
						switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
							case 1: {
								setState(65);
								typeAliasDelare();
							}
							break;
							case 2: {
								setState(66);
								classDeclare();
							}
							break;
							case 3: {
								setState(67);
								dialectInterface();
							}
							break;
						}
					}
					setState(72);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(73);
				match(EOF);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackageDeclareContext extends ParserRuleContext {
		public TerminalNode PACKAGE() {
			return getToken(FunctionParser.PACKAGE, 0);
		}

		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class, 0);
		}

		public TerminalNode SEMICOLON() {
			return getToken(FunctionParser.SEMICOLON, 0);
		}

		public PackageDeclareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_packageDeclare;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof FunctionParserListener)
				((FunctionParserListener) listener).enterPackageDeclare(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof FunctionParserListener)
				((FunctionParserListener) listener).exitPackageDeclare(this);
		}
	}

	public final PackageDeclareContext packageDeclare() throws RecognitionException {
		PackageDeclareContext _localctx = new PackageDeclareContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_packageDeclare);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(75);
				match(PACKAGE);
				setState(76);
				identifier();
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == SEMICOLON) {
					{
						setState(77);
						match(SEMICOLON);
					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDeclareContext extends ParserRuleContext {
		public TerminalNode IMPORT() {
			return getToken(FunctionParser.IMPORT, 0);
		}

		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class, 0);
		}

		public TerminalNode DOT() {
			return getToken(FunctionParser.DOT, 0);
		}

		public TerminalNode ASTERISK() {
			return getToken(FunctionParser.ASTERISK, 0);
		}

		public TerminalNode SEMICOLON() {
			return getToken(FunctionParser.SEMICOLON, 0);
		}

		public ImportDeclareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_importDeclare;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof FunctionParserListener)
				((FunctionParserListener) listener).enterImportDeclare(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof FunctionParserListener) ((FunctionParserListener) listener).exitImportDeclare(this);
		}
	}

	public final ImportDeclareContext importDeclare() throws RecognitionException {
		ImportDeclareContext _localctx = new ImportDeclareContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importDeclare);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(80);
				match(IMPORT);
				setState(81);
				identifier();
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == DOT) {
					{
						setState(82);
						match(DOT);
						setState(83);
						match(ASTERISK);
					}
				}

				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == SEMICOLON) {
					{
						setState(86);
						match(SEMICOLON);
					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DialectInterfaceContext extends ParserRuleContext {
		public TerminalNode INTERFACE() {
			return getToken(FunctionParser.INTERFACE, 0);
		}

		public SimpleIdentifierContext simpleIdentifier() {
			return getRuleContext(SimpleIdentifierContext.class, 0);
		}

		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}

		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class, i);
		}

		public TerminalNode COLON() {
			return getToken(FunctionParser.COLON, 0);
		}

		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class, 0);
		}

		public TerminalNode LCURL() {
			return getToken(FunctionParser.LCURL, 0);
		}

		public TerminalNode RCURL() {
			return getToken(FunctionParser.RCURL, 0);
		}

		public List<FunctionDefineContext> functionDefine() {
			return getRuleContexts(FunctionDefineContext.class);
		}

		public FunctionDefineContext functionDefine(int i) {
			return getRuleContext(FunctionDefineContext.class, i);
		}

		public DialectInterfaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_dialectInterface;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof FunctionParserListener)
				((FunctionParserListener) listener).enterDialectInterface(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof FunctionParserListener)
				((FunctionParserListener) listener).exitDialectInterface(this);
		}
	}

	public final DialectInterfaceContext dialectInterface() throws RecognitionException {
		DialectInterfaceContext _localctx = new DialectInterfaceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dialectInterface);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == AT) {
					{
						{
							setState(89);
							annotation();
						}
					}
					setState(94);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(95);
				match(INTERFACE);
				setState(96);
				simpleIdentifier();
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == COLON) {
					{
						setState(97);
						match(COLON);
						setState(98);
						identifier();
					}
				}

				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == LCURL) {
					{
						setState(101);
						match(LCURL);
						setState(105);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AT) | (1L << OVERRIDE) | (1L << PRIVATE) | (1L << ABSTRACT) | (1L << FUN))) != 0)) {
							{
								{
									setState(102);
									functionDefine();
								}
							}
							setState(107);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(108);
						match(RCURL);
					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeAliasDelareContext extends ParserRuleContext {
		public TerminalNode TYPEALIAS() {
			return getToken(FunctionParser.TYPEALIAS, 0);
		}

		public TerminalNode EQUAL() {
			return getToken(FunctionParser.EQUAL, 0);
		}

		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}

		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class, i);
		}

		public DataTypeNullContext dataTypeNull() {
			return getRuleContext(DataTypeNullContext.class, 0);
		}

		public TypeAliasDelareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_typeAliasDelare;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof FunctionParserListener)
				((FunctionParserListener) listener).enterTypeAliasDelare(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof FunctionParserListener)
				((FunctionParserListener) listener).exitTypeAliasDelare(this);
		}
	}

	public final TypeAliasDelareContext typeAliasDelare() throws RecognitionException {
		TypeAliasDelareContext _localctx = new TypeAliasDelareContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_typeAliasDelare);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(111);
				match(TYPEALIAS);
				setState(114);
				_errHandler.sync(this);
				switch (getInterpreter().adaptivePredict(_input, 11, _ctx)) {
					case 1: {
						setState(112);
						identifier();
					}
					break;
					case 2: {
						setState(113);
						dataTypeNull();
					}
					break;
				}
				setState(116);
				match(EQUAL);
				setState(117);
				identifier();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclareContext extends ParserRuleContext {
		public TerminalNode CLASS() {
			return getToken(FunctionParser.CLASS, 0);
		}

		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}

		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class, i);
		}

		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}

		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class, i);
		}

		public TerminalNode COLON() {
			return getToken(FunctionParser.COLON, 0);
		}

		public TerminalNode LCURL() {
			return getToken(FunctionParser.LCURL, 0);
		}

		public TerminalNode RCURL() {
			return getToken(FunctionParser.RCURL, 0);
		}

		public ClassDeclareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_classDeclare;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof FunctionParserListener) ((FunctionParserListener) listener).enterClassDeclare(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof FunctionParserListener) ((FunctionParserListener) listener).exitClassDeclare(this);
		}
	}

	public final ClassDeclareContext classDeclare() throws RecognitionException {
		ClassDeclareContext _localctx = new ClassDeclareContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_classDeclare);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == AT) {
					{
						{
							setState(119);
							annotation();
						}
					}
					setState(124);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(125);
				match(CLASS);
				setState(126);
				identifier();
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == COLON) {
					{
						setState(127);
						match(COLON);
						setState(128);
						identifier();
					}
				}

				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == LCURL) {
					{
						setState(131);
						match(LCURL);
						setState(132);
						match(RCURL);
					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefineContext extends ParserRuleContext {
		public TerminalNode FUN() {
			return getToken(FunctionParser.FUN, 0);
		}

		public SimpleIdentifierContext simpleIdentifier() {
			return getRuleContext(SimpleIdentifierContext.class, 0);
		}

		public TerminalNode LPAREN() {
			return getToken(FunctionParser.LPAREN, 0);
		}

		public TerminalNode RPAREN() {
			return getToken(FunctionParser.RPAREN, 0);
		}

		public FunctionModifierListContext functionModifierList() {
			return getRuleContext(FunctionModifierListContext.class, 0);
		}

		public TypeParametersContext typeParameters() {
			return getRuleContext(TypeParametersContext.class, 0);
		}

		public FunctionParamDefinesContext functionParamDefines() {
			return getRuleContext(FunctionParamDefinesContext.class, 0);
		}

		public TerminalNode COLON() {
			return getToken(FunctionParser.COLON, 0);
		}

		public DataTypeNullContext dataTypeNull() {
			return getRuleContext(DataTypeNullContext.class, 0);
		}

		public FunctionImplementContext functionImplement() {
			return getRuleContext(FunctionImplementContext.class, 0);
		}

		public FunctionDefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_functionDefine;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof FunctionParserListener)
				((FunctionParserListener) listener).enterFunctionDefine(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof FunctionParserListener)
				((FunctionParserListener) listener).exitFunctionDefine(this);
		}
	}

	public final FunctionDefineContext functionDefine() throws RecognitionException {
		FunctionDefineContext _localctx = new FunctionDefineContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionDefine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AT) | (1L << OVERRIDE) | (1L << PRIVATE) | (1L << ABSTRACT))) != 0)) {
					{
						setState(135);
						functionModifierList();
					}
				}

				setState(138);
				match(FUN);
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == LANGLE) {
					{
						setState(139);
						typeParameters();
					}
				}

				setState(142);
				simpleIdentifier();
				setState(143);
				match(LPAREN);
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AT) | (1L << PACKAGE) | (1L << IMPORT) | (1L << INTERFACE) | (1L << VARARG) | (1L << IDENTIFIER))) != 0)) {
					{
						setState(144);
						functionParamDefines();
					}
				}

				setState(147);
				match(RPAREN);
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == COLON) {
					{
						setState(148);
						match(COLON);
						setState(149);
						dataTypeNull();
					}
				}

				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == LCURL || _la == EQUAL) {
					{
						setState(152);
						functionImplement();
					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionModifierListContext extends ParserRuleContext {
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class, i);
		}

		public List<FunctionModifierContext> functionModifier() {
			return getRuleContexts(FunctionModifierContext.class);
		}

		public FunctionModifierContext functionModifier(int i) {
			return getRuleContext(FunctionModifierContext.class, i);
		}

		public FunctionModifierListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_functionModifierList;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof FunctionParserListener)
				((FunctionParserListener) listener).enterFunctionModifierList(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof FunctionParserListener)
				((FunctionParserListener) listener).exitFunctionModifierList(this);
		}
	}

	public final FunctionModifierListContext functionModifierList() throws RecognitionException {
		FunctionModifierListContext _localctx = new FunctionModifierListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_functionModifierList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
						setState(157);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
							case AT: {
								setState(155);
								annotation();
							}
							break;
							case OVERRIDE:
							case PRIVATE:
							case ABSTRACT: {
								setState(156);
								functionModifier();
							}
							break;
							default:
								throw new NoViableAltException(this);
						}
					}
					setState(159);
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AT) | (1L << OVERRIDE) | (1L << PRIVATE) | (1L << ABSTRACT))) != 0));
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnnotationContext extends ParserRuleContext {
		public TerminalNode AT() {
			return getToken(FunctionParser.AT, 0);
		}

		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class, 0);
		}

		public AnnotationNSContext annotationNS() {
			return getRuleContext(AnnotationNSContext.class, 0);
		}

		public TerminalNode LPAREN() {
			return getToken(FunctionParser.LPAREN, 0);
		}

		public TerminalNode RPAREN() {
			return getToken(FunctionParser.RPAREN, 0);
		}

		public FunctionParamsContext functionParams() {
			return getRuleContext(FunctionParamsContext.class, 0);
		}

		public AnnotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_annotation;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof FunctionParserListener) ((FunctionParserListener) listener).enterAnnotation(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof FunctionParserListener) ((FunctionParserListener) listener).exitAnnotation(this);
		}
	}

	public final AnnotationContext annotation() throws RecognitionException {
		AnnotationContext _localctx = new AnnotationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_annotation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(161);
				match(AT);
				setState(163);
				_errHandler.sync(this);
				switch (getInterpreter().adaptivePredict(_input, 22, _ctx)) {
					case 1: {
						setState(162);
						annotationNS();
					}
					break;
				}
				setState(165);
				identifier();
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == LPAREN) {
					{
						setState(166);
						match(LPAREN);
						setState(168);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PACKAGE) | (1L << IMPORT) | (1L << INTERFACE) | (1L << VARARG) | (1L << NULL) | (1L << NUMBER) | (1L << STRING) | (1L << IDENTIFIER))) != 0)) {
							{
								setState(167);
								functionParams();
							}
						}

						setState(170);
						match(RPAREN);
					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnnotationNSContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class, 0);
		}

		public TerminalNode COLON() {
			return getToken(FunctionParser.COLON, 0);
		}

		public AnnotationNSContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_annotationNS;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof FunctionParserListener) ((FunctionParserListener) listener).enterAnnotationNS(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof FunctionParserListener) ((FunctionParserListener) listener).exitAnnotationNS(this);
		}
	}

	public final AnnotationNSContext annotationNS() throws RecognitionException {
		AnnotationNSContext _localctx = new AnnotationNSContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_annotationNS);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(173);
				identifier();
				setState(174);
				match(COLON);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionModifierContext extends ParserRuleContext {
		public TerminalNode OVERRIDE() {
			return getToken(FunctionParser.OVERRIDE, 0);
		}

		public TerminalNode PRIVATE() {
			return getToken(FunctionParser.PRIVATE, 0);
		}

		public TerminalNode ABSTRACT() {
			return getToken(FunctionParser.ABSTRACT, 0);
		}

		public FunctionModifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_functionModifier;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof FunctionParserListener)
				((FunctionParserListener) listener).enterFunctionModifier(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof FunctionParserListener)
				((FunctionParserListener) listener).exitFunctionModifier(this);
		}
	}
